@@ -29,14 +29,23 @@ class WC_REST_Payments_Orders_Controller extends WC_Payments_REST_Controller {
 	private $gateway;
 
 	/**
+	 * WC_Payments_Customer instance for working with customer information
+	 *
+	 * @var WC_Payments_Customer_Service
+	 */
+	private $customer_service;
+
+	/**
 	 * WC_Payments_REST_Controller constructor.
 	 *
-	 * @param WC_Payments_API_Client   $api_client - WooCommerce Payments API client.
-	 * @param WC_Payment_Gateway_WCPay $gateway - WooCommerce Payments payment gateway.
+	 * @param WC_Payments_API_Client       $api_client - WooCommerce Payments API client.
+	 * @param WC_Payment_Gateway_WCPay     $gateway - WooCommerce Payments payment gateway.
+	 * @param WC_Payments_Customer_Service $customer_service - Customer class instance.
 	 */
-	public function __construct( WC_Payments_API_Client $api_client, WC_Payment_Gateway_WCPay $gateway ) {
+	public function __construct( WC_Payments_API_Client $api_client, WC_Payment_Gateway_WCPay $gateway, WC_Payments_Customer_Service $customer_service ) {
 		parent::__construct( $api_client );
-		$this->gateway = $gateway;
+		$this->gateway          = $gateway;
+		$this->customer_service = $customer_service;
 	}
 
 	/**
@@ -55,6 +64,15 @@ class WC_REST_Payments_Orders_Controller extends WC_Payments_REST_Controller {
 						'required' => true,
 					],
 				],
+			]
+		);
+		register_rest_route(
+			$this->namespace,
+			$this->rest_base . '/(?P<order_id>\w+)/create_customer',
+			[
+				'methods'             => WP_REST_Server::CREATABLE,
+				'callback'            => [ $this, 'create_customer' ],
+				'permission_callback' => [ $this, 'check_permission' ],
 			]
 		);
 	}
@@ -117,6 +135,41 @@ class WC_REST_Payments_Orders_Controller extends WC_Payments_REST_Controller {
 			);
 		} catch ( \Throwable $e ) {
 			Logger::error( 'Failed to capture a terminal payment via REST API: ' . $e );
+			return new WP_Error( 'wcpay_server_error', __( 'Unexpected server error', 'woocommerce-payments' ), [ 'status' => 500 ] );
+		}
+	}
+
+	/**
+	 * Returns customer id from order. Create or update customer if needed.
+	 *
+	 * @param WP_REST_Request $request Full data about the request.
+	 */
+	public function create_customer( $request ) {
+		try {
+			$order_id = $request['order_id'];
+
+			// Do not process non-existing orders.
+			$order = wc_get_order( $order_id );
+			if ( false === $order ) {
+				return new WP_Error( 'wcpay_missing_order', __( 'Order not found', 'woocommerce-payments' ), [ 'status' => 404 ] );
+			}
+
+			$order_user    = $order->get_user();
+			$customer_data = WC_Payments_Customer_Service::map_customer_data( $order );
+			if ( ! $order_user ) {
+				$customer_id = $this->customer_service->create_customer_for_user( new WP_User(), $customer_data );
+			} else {
+				$customer_id = $this->customer_service->get_customer_id_by_user_id( $order_user->ID );
+				if ( $customer_id ) {
+					$customer_id = $this->customer_service->update_customer_for_user( $customer_id, $order_user, $customer_data );
+				} else {
+					$customer_id = $this->customer_service->create_customer_for_user( $order_user, $customer_data );
+				}
+			}
+
+			return $customer_id;
+		} catch ( \Throwable $e ) {
+			Logger::error( 'Failed to create / update customer from order via REST API: ' . $e );
 			return new WP_Error( 'wcpay_server_error', __( 'Unexpected server error', 'woocommerce-payments' ), [ 'status' => 500 ] );
 		}
 	}
